# Draconv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: releases.yml
app/: app.vue
app/assets/: categories.json  extensions.json  supported.json
app/components/: DButton.vue  DConvertItem.vue  DModal.vue  DNavbar.vue  DProgress.vue  DSelect.vue  DTooltip.vue  EncoderInfos.vue  FFmpegInstall.vue  FormatsTable.vue  ModeInfos.vue  SettingItem.vue  SettingsModal.vue
app/lib/: types.ts  useDialogs.ts  useFileStore.ts  useSettings.ts
app/pages/: index.vue
src-tauri/: ._Cargo.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/settings/: default.json
src-tauri/settings/capabilities/: default.json
src-tauri/settings/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/helpers/: ffmpeg_helper.rs  gpu_helper.rs  mod.rs  net_helper.rs  queue_helper.rs  settings_helper.rs
src-tauri/src/tools/: app_handle.rs  convert.rs  error.rs  installer.rs  mod.rs  stopwatch.rs
