[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.47.1", features = ["process", "macros", "rt-multi-thread", "sync", "time"] }
wgpu = "26.0.1"
image = "0.25.8"
tauri-plugin-opener = "2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
futures-util = "0.3.31"
tar = "0.4.44"
xz = "0.1.0"
zip = "6.0.0"
thiserror = "2.0.17"
tauri-plugin-prevent-default = "3.0.3"
